# chatgpt_telegram_bot

./: Makefile  README.md  pyproject.toml  requirements.txt
bot/: config.py  openai_utils.py
