[tool.poetry]
name = "chatgpt-telegram-bot"
version = "0.1.0"
description = ""
authors = ["remimse <86815710+remimse@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "chatgpt_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.35.14"
tiktoken = "^0.3.3"
pyyaml = "^6.0"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"
pydub = "^0.25.1"
python-telegram-bot = "^20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
